# openj9-omr

./: .appveyor.yml  .copyrightignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .jazzignore  .swp  .travis.yml  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  GNUmakefile  INSTALL  LICENSE  NOTICE.md  Notice.html  OmrConfig.cmake  README.md  SECURITY.md  about.html  azure-pipelines.cache  azure-pipelines.yml  config.guess  config.sub  configure  configure.ac  ddr_artifacts.mk  epl-v1.0.html  install-sh  longabout.html  omr.rc.in  omrcfg.CMakeTemplate.h  omrversionstrings.CMakeTemplate.h  run_configure.mk
ddr/: CMakeLists.txt  Makefile
ddr/docs/: intermediate_representation.dia
ddr/lib/: CMakeLists.txt  Makefile
ddr/test/: CMakeLists.txt  Makefile  blacklist  excludes  makefile  sample1.cpp  sample2.cpp  sample3.cpp  sample4.c  test.cpp  testHeader.h
ddr/tools/: CMakeLists.txt  Makefile  getmacros
example/: CMakeLists.txt  gcmain.cpp  main.cpp  makefile
example/glue/: ArrayletObjectModel.hpp  CMakeLists.txt  CollectorLanguageInterfaceImpl.cpp  CollectorLanguageInterfaceImpl.hpp  CompactDelegate.hpp  CompactSchemeFixupObject.cpp  CompactSchemeFixupObject.hpp  ConcurrentMarkingDelegate.cpp  ConcurrentMarkingDelegate.hpp  ConfigurationDelegate.hpp  ConfigurationLanguageInterfaceImpl.cpp  ConfigurationLanguageInterfaceImpl.hpp  ContractslotScanner.hpp  EnvironmentDelegate.cpp  EnvironmentDelegate.hpp  EnvironmentLanguageInterfaceImpl.cpp  EnvironmentLanguageInterfaceImpl.hpp  FrequentObjectsStats.cpp  FrequentObjectsStats.hpp  GlobalCollectorDelegate.cpp  GlobalCollectorDelegate.hpp  HeapRegionDescriptorTypes.hpp  HeapWalkerDelegate.hpp  LanguageSegregatedAllocationCache.hpp  LanguageThreadLocalHeap.hpp  LanguageVMGlue.c  MarkingDelegate.cpp  MarkingDelegate.hpp  MixedObjectModel.hpp  MixedObjectScanner.hpp  Object.hpp  ObjectAllocationModel.hpp  ObjectIterator.cpp  ObjectIterator.hpp  ObjectModel.cpp  ObjectModel.hpp  ObjectModelDelegate.cpp  ObjectModelDelegate.hpp  ObjectScannerState.hpp  Profiling.c  (+13 more)
fvtest/: CMakeLists.txt  omrtest.mk
fvtest/algotest/: .jazzignore  CMakeLists.txt  algoTest.cpp  algorithm_test_internal.h  avltest.c  avltest.lst  hashtabletest.c  hooksample.hdf  hooktest.c  main.cpp  makefile  pooltest.c
fvtest/atomictest/: CMakeLists.txt  TestCAE.cpp  main.cpp
fvtest/compilertest/: CMakeLists.txt  Jit.hpp  Makefile  README.md  iwyu.mk  linter.mk  testjit.mk
fvtest/compilertriltest/: ArithmeticTest.cpp  ArrayTest.cpp  BitPermuteTest.cpp  CMakeLists.txt  CallTest.cpp  CompareTest.cpp  ILValidatorTest.cpp  IficmpTest.cpp  IfxcmpgeReductionTest.cpp  JitTest.cpp  JitTest.hpp  JitTestUtilitiesTest.cpp  LinkageTest.cpp  LogicalTest.cpp  LongAndAsRotateTest.cpp  MaxMinTest.cpp  MinimalTest.cpp  MockStrategyTest.cpp  OpCodeTest.cpp  OpCodeTest.hpp  SelectTest.cpp  SharedVerifiers.hpp  ShiftAndRotateTest.cpp  SimplifierFoldAbsNegTest.cpp  SimplifierFoldAndTest.cpp  TernaryTest.cpp  TreeVerifierTest.cpp  TypeConversionTest.cpp  VectorMaskTest.cpp  VectorTest.cpp  VectorTestUtils.cpp  VectorTestUtils.hpp  main.cpp
fvtest/compilerunittest/: CCData.cpp  CMakeLists.txt  CodeGenTest.cpp  CodeGenTest.hpp  CompilerUnitTest.hpp  main.cpp
fvtest/coretest/: CMakeLists.txt  TestBytes.cpp  TestIntrusiveList.cpp  TestTypeTraits.cpp  main.cpp
fvtest/gc_api_test/: CMakeLists.txt  main.cpp
fvtest/gctest/: .jazzignore  CMakeLists.txt  GCConfigObjectTable.cpp  GCConfigObjectTable.hpp  GCConfigTest.cpp  GCConfigTest.hpp  StartupManagerTestExample.cpp  StartupManagerTestExample.hpp  TestHeapRegionStateTable.cpp  gcTestHelpers.cpp  gcTestHelpers.hpp  main.cpp  makefile
fvtest/jitbuildertest/: AnonymousTest.cpp  CMakeLists.txt  CallReturnTest.cpp  ControlFlowTest.cpp  ConvertBitsTest.cpp  FieldAddressTest.cpp  FieldNameTest.cpp  GlobalTest.cpp  IfThenElseTest.cpp  JBTestUtil.hpp  Makefile  NegateTest.cpp  SelectTest.cpp  SystemLinkageTest.cpp  UnionTest.cpp  UnsignedDivRemTest.cpp  WorklistTest.cpp  main.cpp  selftest.cpp
fvtest/lljbtest/: CMakeLists.txt  add.cpp  arrays.cpp  conditional.cpp  div.cpp  doubles.cpp  floats.cpp  function_call.cpp  lljb_run.cpp  loops.cpp  mandelbrot.cpp  md5.cpp  mul.cpp  print_string.cpp  structs.cpp  (+4 more)
gc/: .clang-format  CMakeLists.txt
glue/: ArrayletObjectModel.hpp  CMakeLists.txt  CollectorLanguageInterfaceImpl.cpp  CollectorLanguageInterfaceImpl.hpp  CompactSchemeFixupObject.cpp  CompactSchemeFixupObject.hpp  ConfigurationLanguageInterfaceImpl.hpp  ContractslotScanner.hpp  EnvironmentLanguageInterfaceImpl.cpp  EnvironmentLanguageInterfaceImpl.hpp  FrequentObjectsStats.cpp  FrequentObjectsStats.hpp  LanguageSegregatedAllocationCache.hpp  LanguageThreadLocalHeap.hpp  LanguageVMGlue.c  MixedObjectModel.hpp  ObjectIterator.cpp  ObjectIterator.hpp  ObjectModel.cpp  ObjectModel.hpp  ObjectScannerState.hpp  Profiling.c  ScavengerDelegate.cpp  ScavengerDelegate.hpp  StartupManagerImpl.cpp  StartupManagerImpl.hpp  UtilGlue.c  VerboseManagerImpl.cpp  VerboseManagerImpl.hpp  objectdescription.h  sizeclasses.h
jitbuilder/: CMakeLists.txt  Makefile  jitbuilder.mk  linter.mk
omr/: .jazzignore  CMakeLists.txt  OMR_Agent.cpp  OMR_MethodDictionary.cpp  OMR_MethodDictionary.hpp  OMR_Profiler.cpp  OMR_Runtime.cpp  OMR_TI.cpp  OMR_TIMemorySize.cpp  OMR_VM.cpp  OMR_VMThread.cpp  makefile  omrrasinit.c  omrti.tdf  omrtrcinit.c  omrvm.tdf
omrsigcompat/: .jazzignore  CMakeLists.txt  makefile  omrsig.cpp  omrsig_internal.hpp
omrtrace/: CMakeLists.txt  makefile  omrtrace_internal.h  omrtraceapi.cpp  omrtracecomponent.cpp  omrtraceformatter.cpp  omrtracelog.cpp  omrtracemain.cpp  omrtracemisc.cpp  omrtraceoptions.cpp  omrtracepublish.cpp  omrtracewrappers.cpp
port/: .jazzignore  CMakeLists.txt  makefile  omrportpriv.h  port.exportlist  port_objects.mk
sharedcache/: CMakeLists.txt
thread/: CMakeLists.txt  exports.cmake  j9thr.tdf  makefile  omrthreadinspect.c  omrthreadinspect.h  thread_include.mk
toolconfig/: .jazzignore  configure  configure.ac
tools/: CMakeLists.txt  configure  configure.ac  toolconfig.h.in  toolconfigure.mk.in
(+3633 files in other folders)
